# autotool-devtool-example

./: .gitignore  Makefile.am  README.md  configure.ac
cfg/: Makefile.am
lib/: Makefile.am  libautotool-devtool-example.c  libautotool-devtool-example.h
src/: Makefile.am  autotool-devtool-example.c
